smlaicloud_new/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vfmerchant-uat
  namespace: dedepos-prd
spec:
  type: ClusterIP
  ports:
    - port: 80    
  selector:
    app: vfmerchant-uat
